crates/forge_app/src/snapshots/forge_app__operation__tests__shell_output_no_truncation.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<shell_output
  command="echo hello"
  shell="/bin/bash"
  exit_code="0"
  wall_time_secs="1.23"
>
<stdout
  total_lines="2"
><![CDATA[hello
world]]>
</stdout>
</shell_output>
